<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="5dp"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/image_of_the_product"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_background" />
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="-30dp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="7dp"
        app:cardElevation="20dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_heading"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    app:fontWeight="700"
                    android:textSize="23sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_share_24"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/some_text"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#757373"
                android:textSize="14sp"
                android:layout_marginTop="-3dp"/>
            <View
                android:layout_width="70dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical" />


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rating"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_star_24"/>
                <TextView
                    android:id="@+id/rating_score"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/rating"/>

                <ImageView
                    android:id="@+id/companyrating"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/rating"/>
                <TextView
                    android:id="@+id/comapny_ratingscore"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/rating"/>

                <ImageView
                    android:id="@+id/love"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_thumb_up_off_alt_24"
                    />
                <ImageView
                    android:id="@+id/cart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_shopping_cart_24"
                    />



            </LinearLayout>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
</LinearLayout>